package CB3;

public abstract class CapBac {
    public abstract int TinhTienDien(int SoKW);
    public abstract CapBac bactren(CapBac c);
}
